[tool.poetry]
name = "poetry-testi"
version = "0.10"
description = "\"testi\""
authors = ["Heikki Nenonen <heikki.nenonen@helsinki.fi>"]
readme = "README.md"
packages = [{include = "poetry_testi"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
